--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
+// .eslintrc.json
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": [
+    "next",
+    "next/core-web-vitals"
+  ],
+  "rules": {
+    "@next/next/no-img-element": "off"
+  }
 }
