--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "@vercel/edge-config": "^1.4.0",
+    "@vercel/kv": "^3.0.0",
     "autoprefixer": "10.4.17",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.460.0",
     "next": "14.1.4",
     "next-auth": "^4.24.5",
@@ -26,12 +31,13 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@types/bcryptjs": "^2.4.6",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.33.2"
+    "@types/jest": "^29.5.11",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
