pushing automated block height and timestamp monitoring cron job code

--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,10 @@
       "src": "next.config.js",
       "use": "@vercel/next"
     }
-  ]
+  ],
+  "crons": [{
+    "path": "/api/cron/check-blocks",
+    "schedule": "* * * * *"
+  }]
+
 }
