--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.460.0",
     "next": "14.1.4",
     "next-auth": "^4.24.5",
+    "node-fetch": "^3.3.2",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
