--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^10.18.0",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.460.0",
     "next": "14.1.4",
     "next-auth": "^4.24.5",
