--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "@vercel/edge-config": "^1.4.0",
@@ -36,6 +35,7 @@
     "@testing-library/react": "^14.1.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.11",
+    "@types/node": "^22.9.1",
     "@types/testing-library__jest-dom": "^5.14.9",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
